--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
+tensorflow ==1.8.0
 pandas >= 1.0.4
 numpy >= 1.18.4
 jupyterlab >= 2.1.4
 matplotlib >= 3.2.1
 seaborn >= 0.10.1
-tensorboard >= 2.2.2
-tensorflow >= 2.2.0
+#tensorboard >= 2.2.2
 scikit-learn >= 0.23.1
 Pillow >= 7.1.2
 graphviz >= 0.14
